[Backend] fea: delete file